h1. CHANGELOG

h3. 3.0.37 April 24, 2015

* option to remove Rails Turbolinks
* disable Turbolinks for 'rails-stripe-membership-saas' example application

h3. 3.0.36 April 23, 2015

* install bundler gem (because it is no longer automatically installed by RVM)

h3. 3.0.35 April 16, 2015

* fix error with Haml::HTML (contributed by Matthew Orahood)

h3. 3.0.34 April 15, 2015

* add 'rails-stripe-membership-saas' example application

h3. 3.0.33 February 4, 2015

* add 'rails-stripe-coupons' example application

h3. 3.0.32 December 29, 2014

* 'learn-rails' recipe no longer needs gems 'activerecord-tableless' or 'thin'

h3. 3.0.31 December 29, 2014

* set 'rubocop' option to false for RailsApps example apps

h3. 3.0.30 December 29, 2014

* suggest upgrade to Rails 4.2 for Rails 4.1 users

h3. 3.0.29 December 9, 2014

* improve 'extras' recipe to add 'rubocop' option (contributed by Jason Yeo)
* remove sdoc for Rails 4.2 (contributed by Jason Yeo)
* improved assignment of prefs[:prod_webserver] (contributed by Jose Ney Guerrero)
* substitute backtick for a single quote in 'readme' recipe (contributed by DamirSvrtan)

h3. 3.0.28 November 19, 2014

* add 'spring-commands-rspec' gem for testing (contributed by Carlos Eduardo Rodrigues Diógenes)
* fix for 'locale' recipe (contributed by Carlos Eduardo Rodrigues Diógenes)
* add 'rails-stripe-checkout' example application

h3. 3.0.27 November 9, 2014

* add mailing list to rails-signup-download example application

h3. 3.0.26 October 27, 2014

* rename 'rails_mailinglist_signup' to ''rails_mailinglist_activejob'

h3. 3.0.25 October 18, 2014

* add options to 'rails_bootstrap' and 'rails_foundation' recipes to allow choice of database and SimpleForm

h3. 3.0.24 October 17, 2014

* restore 'rails_mailinglist_signup' example app for Rails 4.2
* no need to specify GitHub source for Devise gem for Rails 4.2

h3. 3.0.23 October 1, 2014

* fix handling of optional hostname for PostgreSQL (closes #314)