@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "3.0.37"
+  VERSION = "3.0.38"
 end
